<resources>
    <string name="app_name">FitApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="exercises">Exercises</string>
    <string name="fitapp">Fitapp</string>
    <string name="author_name">Jakub Żywicki</string>
    <string name="menu_workout">Workouts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">Track records</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="menu_compare">History</string>
    <string name="menu_exercises">Exercise database</string>
    <string name="date_example">12/03/2020 19:38</string>
    <string name="user_name">Jakub Zywicki</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="author">Author:</string>
    <string name="show_video">show video</string>
    <string name="description">Description</string>
</resources>
