<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exercises"
            android:icon="@drawable/ic_menu_exercises"
            android:title="@string/exercises"/>
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/ic_menu_training"
            android:title="@string/menu_workout"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_compare"
                android:icon="@drawable/ic_menu_compare"
                android:title="@string/menu_compare" />
        </menu>
    </item>
    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>
