<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fa.fitapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_exercises"
        android:name="fa.fitapp.ui.exercises.ExercisesFragment"
        android:label="@string/menu_exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/nav_workout"
        android:name="fa.fitapp.ui.training.TrainingFragment"
        android:label="@string/menu_workout"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_history"
        android:name="fa.fitapp.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_compare"
        android:name="fa.fitapp.ui.share.ShareFragment"
        android:label="@string/menu_compare"
        tools:layout="@layout/fragment_compare" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="fa.fitapp.ui.send.SendFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>